--- a/object_tiger/.vscode/settings.json
+++ b/object_tiger/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "typeinfo": "cpp",
         "type_traits": "cpp",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "env.h": "c"
     }
 }
